--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flappy Bird</title>
+    <link rel="icon" type="image/x-icon" href="/assets/favicon_2.png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,7 +13,7 @@
         <h2>Menu</h2>
         <button onclick="startplay()">Start Play</button>
         <button onclick="showHighestScores()">Highest Scores</button>
-        <button onclick="showDifficultyScreen()">Difficulty</button>
+        <button onclick="showDifficultyScreen()">Difficulty<span class="material-symbols-outlined">radio_button_checked</span> <span id="selectedDifficulty"> </span></button>
         <button onclick="showAbout()">About</button>
         <button onclick="showReset()">Reset</button>
     </div>
