--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="preloader">
+        <div id="preloader-content">
+            <img src="assets/favicon_2.png" alt="Flappy Bird Logo">
+            <div id="preloader">Loading<span id="loadingDots"></span></div>
+        </div>
+    </div>
+    
     <div id="Mainmenu">
         <h2>Menu</h2>
         <button onclick="startplay()">Start Play</button>
