--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 <body>
     <div id="preloader">
         <div id="preloader-content">
-            <img src="assets/favicon_2.png" alt="Flappy Bird Logo">
-            <div id="preloader">Loading<span id="loadingDots"></span></div>
+            <h1>Flappy Bird</h1>
+            <div id="progress-bar-container">
+                <div id="progress-bar"></div>
+            </div>
+            <p id="progress-text">0%</p>
         </div>
-    </div>
+    </div>   
     
     <div id="Mainmenu">
         <h2>Menu</h2>
